k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: larafleet
spec:
  selector:
    app: larafleet-app
  ports:
    - port: 9000
      targetPort: 9000
